# conversion-engine

./: .env.example  .gitignore  AGENTS.md  README.md  ablation_results.json  baseline.md  day_2_grounding_commit.md  final_submission_report.md  fix_prompt_structure.md  grounding_commit.md  held_out_traces.jsonl  memo_source.md  method.md  package-lock.json  scaffolding_vs_model_planning_question.md  target_failure_mode.md
agent/: __init__.py  main.py  requirements.txt
docs/: frontend_implementation_plan.md  frontend_runbook.md  implementation_checklist.md  implementation_plan.md  webhook_contracts.md
eval/: PLAN.md  README.md  pyproject.toml  trace_log.jsonl
eval/config/: baseline.example.yaml  baseline.yaml
eval/schemas/: trace_log_line.v1.schema.json
eval/splits/: README.md  heldout_task_ids.example.json
eval/src/harness/: __init__.py  cli.py  config.py  constants.py  env_setup.py  eval_run_state.py  heldout_prepare.py  langfuse_sink.py  metrics.py  metrics_rollups.py  resume_state.py  runner.py  score_log.py  split_checks.py  trace_payload.py  trace_summary.py  trace_writer.py
eval/templates/: baseline.md.j2
eval/tests/: test_eval_run_state.py  test_heldout_prepare.py  test_metrics_rollups.py  test_resume_state.py  test_split_checks.py  test_trace_payload.py  test_trace_summary.py
harness/: PLAN.md  README.md  pyproject.toml
scripts/: list-calcom-event-types.ps1  render_memo_pdf.py  run_act4_heldout_eval.py  smoke-act2-live.ps1  smoke-booking-sync.ps1  smoke-email.ps1  smoke-hubspot-booking.ps1  smoke-hubspot-tools.ps1  smoke-sms.ps1
(+364 files in other folders)
